# mcp-postgis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: claude-desktop-setup.md  getting-started.md  qgis-setup.md  security.md
src/mcp_postgis/: __init__.py  __main__.py  config.py  context.py  db.py  errors.py  geom.py  prompts.py  resources.py  safety.py  server.py
src/mcp_postgis/tools/: export.py  geometry.py  ingest.py  introspection.py  layers.py  query.py  spatial.py
tests/: conftest.py
tests/fixtures/: seed.sql
tests/integration/: test_db.py  test_export.py  test_geometry.py  test_ingest.py  test_introspection.py  test_layers.py  test_query.py  test_resources.py  test_server.py  test_smoke.py  test_spatial.py
tests/unit/: test_config.py  test_geom.py  test_imports.py  test_prompts.py  test_safety.py
