[project]
name = "mcp-postgis"
version = "0.2.1"
description = "Model Context Protocol server for PostGIS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "psychonaut0", email = "psychonaut0@users.noreply.github.com" }]
keywords = ["mcp", "postgis", "postgresql", "gis", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "mcp[cli]>=1.2.0",
  "psycopg[binary,pool]>=3.2",
  "pglast>=6.0,<8.0",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres]>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-shapely",
]

[project.scripts]
mcp-postgis = "mcp_postgis.server:main"

[project.urls]
Homepage = "https://github.com/psychonaut0/mcp-postgis"
Repository = "https://github.com/psychonaut0/mcp-postgis"
Issues = "https://github.com/psychonaut0/mcp-postgis/issues"
Changelog = "https://github.com/psychonaut0/mcp-postgis/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_postgis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # asserts allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mcp_postgis"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: needs a postgres container"]
